--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+           java-version: '21'
+           distribution: 'temurin' # Use Temurin (Adoptium) JDK
+
       - name: Build Java application
         run: |
           mvn clean package
