--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,17 @@ jobs:
           source: "target/security-server-0.0.1-SNAPSHOT.jar,Dockerfile,docker-compose.yml"
           target: "/home/ec2-user/app"
 
+      - name: SSH and stop previous Java server
+        uses: appleboy/ssh-action@master
+        with:
+            host: 13.235.232.46
+            username: ec2-user
+            key: ${{ secrets.EC2_SSH_KEY }}
+            script: |
+              echo "Stopping previous Java server..."
+              sudo pkill -f "java -jar security-server-0.0.1-SNAPSHOT.jar"
+              echo "Previous Java server stopped."
+
       - name: SSH and deploy on EC2
         uses: appleboy/ssh-action@master
         with:
