--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,14 +35,19 @@ jobs:
       - name: SSH and stop previous Java server
         uses: appleboy/ssh-action@master
         with:
-            host: 13.235.232.46
-            username: ec2-user
-            key: ${{ secrets.EC2_SSH_KEY }}
-            script: |
+          host: 13.235.232.46
+          username: ec2-user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            echo "Checking for running Java server..."
+            if pgrep -f "java -jar security-server-0.0.1-SNAPSHOT.jar"; then
               echo "Stopping previous Java server..."
               sudo pkill -f "java -jar security-server-0.0.1-SNAPSHOT.jar"
               echo "Previous Java server stopped."
-
+            else
+              echo "No running Java server found."
+            fi
+            
       - name: SSH and deploy on EC2
         uses: appleboy/ssh-action@master
         with:
