--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
            java-version: '21'
-           distribution: 'temurin' # Use Temurin (Adoptium) JDK
+           distribution: 'corretto' # Use Temurin (Adoptium) JDK
 
       - name: Build Java application
         run: |
