--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-           java-version: '21'
-           distribution: 'corretto'
+           java-version: '17'
+           distribution: 'microsoft'
 
       - name: Build Java application
         run: |
