--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           host: 13.235.232.46
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "target/security-server-0.0.1-SNAPSHOT.jar,Dockerfile,docker-compose.yml"
+          source: "target/security-server-0.0.1-SNAPSHOT.jar,Dockerfile,docker-compose.yml,src/main/resources/application.properties"
           target: "/home/ec2-user/app"
 
       - name: SSH and deploy on EC2
