--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   app:
     image: security-server
+    volumes:
+      - ./src/main/resources/application.properties:/app/application.properties
     build:
       context: .
       dockerfile: Dockerfile
